# ignition

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  README.md  meson.build
.github/workflows/: flatpak-builder.yml  static_checks.yml
build-aux/: io.github.flattool.Ignition.json
data/: io.github.flattool.Ignition.desktop.in  io.github.flattool.Ignition.gschema.xml  io.github.flattool.Ignition.metainfo.xml.in  io.github.flattool.Ignition.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  de.po  es.po  fr.po  hu.po  ignition.pot  meson.build  pt_BR.po  uk.po
src/: app_chooser_page.js  app_row.js  autostart_entry.js  const.js.in  details_page.js  entry_row.js  error_toast.js  file_watcher.js  io.github.flattool.Ignition.data.gresource.xml  io.github.flattool.Ignition.src.gresource.xml  main.js  meson.build  properties_dialog.js  utils.js  window.js
src/gtk/: app-chooser-page.blp  app-row.blp  details-page.blp  entry-row.blp  help-overlay.blp  properties-dialog.blp  window.blp
